--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.5.0",
     "mongoose": "^7.3.2",
     "next": "13.4.6",
@@ -18,6 +20,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "sharp": "^0.32.3",
+    "supports-color": "^8.1.1",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
