--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "sharp": "^0.32.3",
+    "socket.io-client": "^4.7.2",
     "supports-color": "^8.1.1",
     "tailwindcss": "3.3.2"
   },
